# Quoridor_Game

./: .gitignore  DISTRIBUTED_TRAINING.md  QUICKSTART_RELEASE.md  README.md  RELEASE.md  build.py  constants.py  game.py  main.py  pyproject.toml  quoridor.spec  quoridor_game.spec
.github/workflows/: release.yml
AI/: action_utils.py  alpha_beta.py  alpha_mcts.py  distributed.py  encoder.py  mcts.py  network.py  train.ipynb  train.py
runs/distributed_20251209_200648/events.out.tfevents.1765303608.asoliman-ASUS-TUF-Dash-F15.241658.0/distributed_20251209_200648/: events.out.tfevents.1765303608.asoliman-ASUS-TUF-Dash-F15.241658.0
runs/distributed_20251210_151945/: events.out.tfevents.1765372785.asoliman-ASUS-TUF-Dash-F15.121352.0
runs/distributed_20251210_152135/: events.out.tfevents.1765372895.asoliman-ASUS-TUF-Dash-F15.125373.0
runs/distributed_20251210_152324/: events.out.tfevents.1765373004.asoliman-ASUS-TUF-Dash-F15.129578.0
runs/distributed_20251210_190512/: events.out.tfevents.1765386312.asoliman-ASUS-TUF-Dash-F15.370597.0
runs/distributed_20251212_225010/: events.out.tfevents.1765579810.cs-01kca4ge6162d9377ve3pya37x.75991.0
runs/quoridor_20251209_150133/: events.out.tfevents.1765285293.asoliman-ASUS-TUF-Dash-F15.20105.0
runs/quoridor_20251209_150151/: events.out.tfevents.1765285311.asoliman-ASUS-TUF-Dash-F15.20508.0
scripts/: build_release.bat  build_release.sh  run_distributed.sh  start_head.sh  start_worker.sh  stop_cluster.sh
(+2 files in other folders)
