[project]
name = "quoridor-game"
version = "0.2.0"
description = "Quoridor 2-player game with AlphaZero AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.6",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
train = [
    "tqdm>=4.65.0",
]
