[project]
name = "quoridor-game"
version = "0.2.3"
description = "Quoridor 2-player game with AlphaZero AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.6",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
train = [
    "tqdm>=4.65.0",
    "tensorboard>=2.15.0",
    "torch>=2.9.1"
]
distributed = [
    "tqdm>=4.65.0",
    "tensorboard>=2.15.0",
    "ray[default]>=2.9.0",
    "lightning-sdk>=2025.12.9",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly define which packages to include
packages = ["AI"]

# Define Python modules in the root directory
py-modules = ["constants", "game", "main"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

# Exclude non-package directories
[tool.setuptools.exclude-package-data]
"*" = ["runs", "checkpoints", "assets", "quoridor_ai", "docs", "scripts", "__pycache__"]
